fix bug with feed-card gaps in safari on tablet screen and below

--- a/src/sass/components/_feed-grid.scss
+++ b/src/sass/components/_feed-grid.scss
@@ -9,12 +9,16 @@
     }
     @include tablet {
         flex-direction: column;
+        grid-gap: 0;
     }
     @include media(920px) {
         display: flex;
     }
 
     &__item {
+        @include tablet {
+            margin: 12px;
+        }
         @include media(920px) {
             display: flex;
             justify-content: center;
@@ -36,6 +40,10 @@
             grid-column-end: 4;
             grid-row-start: 1;
             grid-row-end: 1;
+            @include media(920px) {
+                margin-top: 30px;
+                margin-bottom: 30px;
+            }
         }
 
         &-3 {
